# Triangulation-Generation

./: .gitignore  CMakeLists.txt  GA.py  RL_fib.ipynb  RL_fib_and_triang.ipynb  RL_subpolytope.ipynb  RL_triang.ipynb  Readme.md  agent.py  build.sh  environment.py  example.py  fitness.py  integer_rref.py  py_polytope.cpp  setup.py  utils.py  weighted.cpp  weighted_polytope.hpp
.ipynb_checkpoints/: utils-checkpoint.py
Elli/: DeepQL-3.ipynb  GA.py  GA_triang.py  Working Notebook.ipynb  Working_T.ipynb  example.py  fitness.py  fitness_poly.py  fitness_triang.py  setup.py  utils.py  working_example.ipynb
Elli/poly/: GA_poly.py  Working_P.ipynb
examples/: fibration_env.ipynb
notebooks/: General_subpolytope_fibration.ipynb  RL_fib_and_triang.ipynb  RL_fib_and_triang_K3.ipynb  cytools_polytope.ipynb  full_genetic_K3_fibrations.ipynb  full_genetic_fibrations.ipynb  full_genetic_fibrations_larger_codim.ipynb  ga_triangulate.ipynb  genetic_fibrations_larger_codim_5d_example.ipynb  polytope.ipynb  polytope_2d.ipynb  subspace_optimized.ipynb  triangulation_restriction.ipynb
